--- a/_posts/2018-08-22-mp-series-1.md
+++ b/_posts/2018-08-22-mp-series-1.md
@@ -271,8 +271,6 @@ module.exports = {
 
 框架选择好了以后，我们就开始准备开发自己的小程序吧。
 
-我在 github 上传了一个简单的[表白小程序源码](https://github.com/viewerw/lovejin)，想要入门小程序开发的不妨去 star 一下。这个小程序使用了 mpvue 框架，只有一个 page,没有调用 api,十分简单，熟悉代码后，对于后面的学习也很有帮助。
+下篇我们一起学习如何利用腾讯云+mpvue 开发一个自己的小程序---拼词乐斗。线上预览：
 
-线上预览：
-
-![](/styles/images/jin.jpg)
+![](/styles/images/cw.jpg)
